add generate PDF and glossary

--- a/client/src/app/guide/guide.component.html
+++ b/client/src/app/guide/guide.component.html
@@ -126,10 +126,9 @@
           A report is generated using the supplied source data and layout that
           was selected. Hover over the '<i class="bi bi-book"></i>' icon to view
           the description that was set on the control.
-          <em
-            >Upcoming features include: export to PDF, e-mail & send as
-            shareable link.</em
-          >
+        </p>
+        <p>
+          <em>Upcoming features include: e-mail, send as shareable link.</em>
         </p>
         <img
           src="/assets/photos/generate-report-post.png"
