--- a/client/src/app/generate/generate.component.html
+++ b/client/src/app/generate/generate.component.html
@@ -14,7 +14,10 @@
   <div class="row mb-3">
     <div class="col-6">
       <label for="template" class="mb-2">
-        Layout<i class="bi bi-info-circle ms-2"></i
+        Layout<i
+          class="bi bi-info-circle ms-2"
+          tooltip="The layout containing the controls which will map to the workbook supplied in 'Source File'."
+        ></i
       ></label>
       <select
         id="layout"
@@ -33,7 +36,10 @@
     </div>
     <div class="col-6">
       <label for="clientName" class="mb-2">
-        Client Name<i class="bi bi-info-circle ms-2"></i
+        Client Name<i
+          class="bi bi-info-circle ms-2"
+          tooltip="Name of the client the report is being created for. Will appear in the final generated report."
+        ></i
       ></label>
       <input
         type="text"
@@ -47,7 +53,10 @@
   <div class="row mb-5">
     <div class="col-6">
       <label for="sourceFile" class="mb-2"
-        >Source File<i class="bi bi-info-circle ms-2"></i
+        >Source File<i
+          class="bi bi-info-circle ms-2"
+          tooltip="Excel file containing the source data to be presented in the report."
+        ></i
       ></label>
       <input
         id="sourceFile"
