--- a/client/src/app/layout-control/layout-control.component.html
+++ b/client/src/app/layout-control/layout-control.component.html
@@ -38,7 +38,10 @@
       <div class="row mb-4 align-items-center">
         <div class="col">
           <label for="name" class="mb-2"
-            >Name<i class="bi bi-info-circle ms-2"></i
+            >Name<i
+              class="bi bi-info-circle ms-2"
+              tooltip="Name of the control. Used to uniquely identify the control for the given layout."
+            ></i
           ></label>
           <input
             id="name"
