--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -1,9 +1,16 @@
-<div class="row register-row d-flex" (click)="openModal(registerModal)">
+<div class="row register-row d-flex mb-4" (click)="openModal(registerModal)">
   <div class="col mb-2">
     <h3>Register</h3>
     <hr />
     <p>Create a new account and start creating your templates.</p>
   </div>
+</div>
+<div class="row" routerLink="/guide">
+  <div class="col mb-3">
+    <h3>User Guide<i class="bi bi-patch-question ms-2"></i></h3>
+  </div>
+  <hr />
+  <p>Read the user guide to get assistance on using ReportJewel.</p>
 </div>
 <ng-template #registerModal>
   <div class="modal-header text-center">
