--- a/client/src/app/_styles/row.styles.css
+++ b/client/src/app/_styles/row.styles.css
@@ -1,5 +1,5 @@
 .row {
-  border: 1px solid rgba(236, 240, 241);
+  border: 1px solid #868e96;
   padding: 25px;
   border-radius: 25px;
   cursor: pointer;
