--- a/client/src/app/guide/guide.component.html
+++ b/client/src/app/guide/guide.component.html
@@ -1,4 +1,4 @@
-<div class="guide-container">
+<div class="guide-container" [@fadeIn]>
   <div class="row">
     <div class="col"><h1>How To Use</h1></div>
   </div>
