--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,26 +1,28 @@
-<div class="row mb-4" routerLink="/layouts">
-  <div class="col mb-3">
-    <h3>Layouts<i class="bi bi-columns ms-2"></i></h3>
+<div class="home-container" [@fadeIn]>
+  <div class="row mb-4" routerLink="/layouts">
+    <div class="col mb-3">
+      <h3>Layouts<i class="bi bi-columns ms-2"></i></h3>
+    </div>
+    <hr />
+    <p>Access your reports to view, edit or delete your layout.</p>
   </div>
-  <hr />
-  <p>Access your reports to view, edit or delete your layout.</p>
-</div>
-<div class="row mb-4" routerLink="/generate">
-  <div class="col mb-3">
-    <h3>
-      Generate Reports from Excel<i class="bi bi-file-spreadsheet ms-2"></i>
-    </h3>
+  <div class="row mb-4" routerLink="/generate">
+    <div class="col mb-3">
+      <h3>
+        Generate Reports from Excel<i class="bi bi-file-spreadsheet ms-2"></i>
+      </h3>
+    </div>
+    <hr />
+    <p>
+      Generate reports by choosing a layout and uploading an Excel workbook that
+      you provide.
+    </p>
   </div>
-  <hr />
-  <p>
-    Generate reports by choosing a layout and uploading an Excel workbook that
-    you provide.
-  </p>
-</div>
-<div class="row" routerLink="/guide">
-  <div class="col mb-3">
-    <h3>User Guide<i class="bi bi-patch-question ms-2"></i></h3>
+  <div class="row" routerLink="/guide">
+    <div class="col mb-3">
+      <h3>User Guide<i class="bi bi-patch-question ms-2"></i></h3>
+    </div>
+    <hr />
+    <p>Read the user guide to get assistance on using ReportJewel.</p>
   </div>
-  <hr />
-  <p>Read the user guide to get assistance on using ReportJewel.</p>
 </div>
