--- a/client/src/app/layouts/layouts.component.html
+++ b/client/src/app/layouts/layouts.component.html
@@ -1,25 +1,27 @@
-<div class="row mb-2">
-  <div class="col">
-    <h1>
-      Layouts<span
-        ><button class="btn btn-success btn-sm ms-3" (click)="onAddLayout()">
-          ADD
-        </button></span
-      >
-    </h1>
+<div class="layouts-header">
+  <div class="row mb-2">
+    <div class="col">
+      <h1>
+        Layouts<span
+          ><button class="btn btn-success btn-sm ms-3" (click)="onAddLayout()">
+            <span class="button-label">add</span>
+          </button></span
+        >
+      </h1>
+    </div>
   </div>
-</div>
-<div class="row">
-  <div class="col">
-    <p>
-      Get started by selecting or creating a report layout. Layouts are used
-      during the report generation process.
-    </p>
+  <div class="row">
+    <div class="col">
+      <p>
+        Get started by selecting or creating a report layout. Layouts are used
+        during the report generation process.
+      </p>
+    </div>
   </div>
 </div>
 <hr />
 <ng-container *ngIf="layouts">
-  <div *ngIf="layouts.length > 0; else noLayouts" class="row mt-4">
+  <div *ngIf="layouts.length > 0; else noLayouts" class="row mt-4" [@fadeIn]>
     <div class="col">
       <div class="table-container">
         <table class="table table-striped table-hover table-responsive">
@@ -41,6 +43,21 @@
         </table>
       </div>
     </div>
+    <div class="d-flex justify-content-center" *ngIf="pagination">
+      <pagination
+        [boundaryLinks]="true"
+        [totalItems]="pagination.totalItems"
+        [itemsPerPage]="pagination.itemsPerPage"
+        [maxSize]="5"
+        [(ngModel)]="pagination.currentPage"
+        (pageChanged)="pageChanged($event)"
+        previousText="&lsaquo;"
+        nextText="&rsaquo;"
+        firstText="&laquo;"
+        lastText="&raquo;"
+      >
+      </pagination>
+    </div>
   </div>
   <ng-template #noLayouts>
     <div class="row">
@@ -50,19 +67,3 @@
     </div>
   </ng-template>
 </ng-container>
-
-<div class="d-flex justify-content-center" *ngIf="pagination">
-  <pagination
-    [boundaryLinks]="true"
-    [totalItems]="pagination.totalItems"
-    [itemsPerPage]="pagination.itemsPerPage"
-    [maxSize]="5"
-    [(ngModel)]="pagination.currentPage"
-    (pageChanged)="pageChanged($event)"
-    previousText="&lsaquo;"
-    nextText="&rsaquo;"
-    firstText="&laquo;"
-    lastText="&raquo;"
-  >
-  </pagination>
-</div>
