--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -1,16 +1,18 @@
-<div class="row register-row d-flex mb-4" (click)="openModal(registerModal)">
-  <div class="col mb-2">
-    <h3>Register</h3>
+<div class="register-container" [@fadeIn]>
+  <div class="row register-row d-flex mb-4" (click)="openModal(registerModal)">
+    <div class="col mb-2">
+      <h3>Register</h3>
+      <hr />
+      <p>Create a new account and start creating your templates.</p>
+    </div>
+  </div>
+  <div class="row" routerLink="/guide">
+    <div class="col mb-3">
+      <h3>User Guide<i class="bi bi-patch-question ms-2"></i></h3>
+    </div>
     <hr />
-    <p>Create a new account and start creating your templates.</p>
+    <p>Read the user guide to get assistance on using ReportJewel.</p>
   </div>
-</div>
-<div class="row" routerLink="/guide">
-  <div class="col mb-3">
-    <h3>User Guide<i class="bi bi-patch-question ms-2"></i></h3>
-  </div>
-  <hr />
-  <p>Read the user guide to get assistance on using ReportJewel.</p>
 </div>
 <ng-template #registerModal>
   <div class="modal-header text-center">
@@ -105,7 +107,7 @@
       form="registerForm"
       [disabled]="!registerForm.valid"
     >
-      Register
+      <span class="button-label">register</span>
     </button>
   </div>
 </ng-template>
