fix issue with validity of create report button

--- a/client/src/app/generate/generate.component.html
+++ b/client/src/app/generate/generate.component.html
@@ -65,6 +65,7 @@
           type="file"
           (change)="onFileChange($event)"
           name="sourceFile"
+          formControlName="sourceFile"
         />
       </div>
     </div>
