updated guide with pdf download

--- a/client/src/app/guide/guide.component.html
+++ b/client/src/app/guide/guide.component.html
@@ -137,5 +137,27 @@
         />
       </div>
     </div>
+    <div class="row">
+      <div class="col">
+        <p>
+          Hit the '<i class="bi bi-filetype-pdf"></i>' icon to download a PDF of
+          the generated report.
+        </p>
+        <img
+          src="/assets/photos/report-pdf-before.png"
+          alt="report pdf before"
+        />
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <p>
+          The downloaded PDF includes the whole report as well as the glossary
+          describing each control. Keep it for personal use, or e-mail it to a
+          friend.
+        </p>
+        <img src="/assets/photos/report-pdf-after.png" alt="report pdf after" />
+      </div>
+    </div>
   </section>
 </div>
